--- a/src/launcher/index.html
+++ b/src/launcher/index.html
@@ -4,7 +4,8 @@
     <title>Test</title>
 
     <!--styles-->
-    <link rel="stylesheet/less" href="resources/core.less" />
+    <link rel="stylesheet/less" href="resources/themes/base/library.less" />
+    <link rel="stylesheet/less" href="resources/themes/dracula/library.less" />
 
     <!--thirdparty-->
     <script src="resources/thirdparty/less/dist/less.js"></script>
@@ -12,10 +13,6 @@
     <script src="resources/thirdparty/requirejs/require.js"></script>
     <script src="resources/thirdparty/angularjs/angular.js"></script>
     <script src="resources/thirdparty/angularjs/angular-route.js"></script>
-    <script>
-    function Header() {
-    }
-    </script>
 
     <!--source-->
     <script src="resources/core.js"></script>
