--- a/src/core/resources/sap/sbo/ng4c/app/Application.html
+++ b/src/core/resources/sap/sbo/ng4c/app/Application.html
@@ -1,6 +1,6 @@
 ﻿<header ng-controller="sap.sbo.ng4c.header.Header" ng-include="template" ng-class="className"></header>
 <section ng-controller="sap.sbo.ng4c.launchpad.Launchpad" ng-class="className">
     <div ng-controller="sap.sbo.ng4c.launchpad.Dashboard" ng-include="template" ng-class="className"></div>
-    <div ng-controller="sap.sbo.ng4c.aside.Aside" ng-include="template" ng-class="className"></div>
+    <div ng-controller="sap.sbo.ng4c.aside.Aside" ng-include="template" ng-class="className" style="width:{{width}}px;"></div>
 </section>
 <footer ng-controller="sap.sbo.ng4c.footer.Footer" ng-class="className"></footer>
